Tests/a1/reject/08.ul
int main (while() {}) {
	print return x;
}